fixed silly overflow bug

--- a/hey-team/src/components/Dashboard.css
+++ b/hey-team/src/components/Dashboard.css
@@ -4,5 +4,5 @@ display: flex;
 
 html
 {
-    overflow-x: none !important;
+    overflow-x: hidden !important;
 }
